# ReleaseLens

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
config/: model_pins.yaml  model_routing.yaml  peps.yaml  registry.yaml  thresholds.yaml
data/fixtures/: PEP-658.yaml
docs/: architecture.md
docs/report-samples/: report.md
docs/scope/: curated-peps.md
infra/langfuse/: .env.example  docker-compose.yml
src/releaselens/: cli.py  config.py  graph.py  llm.py  routing.py  state.py
src/releaselens/connectors/: devpi.py  thirdparty.py
src/releaselens/eval/: fixtures.py  langfuse_scores.py  report.py  runner.py  score.py
src/releaselens/nodes/: critic.py  evidence_aggregate.py  evidence_changelog.py  evidence_probe.py  evidence_static.py  feature_extract.py  impact_scope.py  matrix_build.py  pep_ingest.py  report_render.py  test_author.py  test_authoring_aggregate.py  verify.py
src/releaselens/observability/: langfuse.py
src/releaselens/peps/: rst.py
src/releaselens/protocols/: registry.py
src/releaselens/schemas/: __init__.py  evidence.py  feature.py  impact.py  report.py  support.py  tests.py  verification.py
src/releaselens/tools/: __init__.py  _stub_mode.py  differential_runner.py  github.py  rag.py  (+2 more)
templates/: eval.md.j2  report.md.j2
tests/: conftest.py
tests/eval/: test_cli_eval.py  test_langfuse_scores.py
tests/unit/: test_critic.py  test_feature_extract.py  test_loop_integration.py  test_observability.py  test_pep_ingest.py  test_rst.py  test_smoke.py  test_test_author.py  test_test_authoring_aggregate.py
(+45 files in other folders)
