[project]
name = "releaselens"
version = "0.1.0"
description = "Multi-agent pipeline that reconciles Python packaging PEPs against real implementations and produces an impact report against a target codebase."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Mark McMurray" }]
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3,<1.0",
    "langchain-aws>=0.2.0",
    "litellm>=1.50.0",
    "langfuse>=2.50,<3.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "chromadb>=0.5",
    "pygithub>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[project.scripts]
releaselens = "releaselens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/releaselens"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
